# clap-trap

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
examples/: cli.cpp  validate.cpp
include/clap-headless-host/: audio-buffers.h  clap-headless-host.h  plugin-loader.h  test-host.h
include/clap-trap/: audio-buffers.h  clap-trap.h  midi-file.h  plugin-loader.h  test-host.h  wav-file.h
src/: audio-buffers.cpp  midi-file.cpp  plugin-loader.cpp  test-host.cpp  wav-file.cpp
tests/: test_main.cpp
